# ClaudeMCP

./: .gitignore  README.md  pyproject.toml
examples/: tenants.yaml
src/gateway/: __init__.py  cli.py  server.py
src/gateway/config/: loader.py
src/gateway/middleware/: auth.py  rate_limiter.py  usage_logger.py
src/gateway/proxy/: aggregator.py
src/gateway/routing/: pipeline.py  router.py
src/gateway/utils/: __init__.py  env.py  errors.py
src/src/gateway/: __init__.py  server.py
src/src/gateway/config/: loader.py
src/src/gateway/middleware/: auth.py  rate_limiter.py
src/src/gateway/routing/: pipeline.py  router.py
src/src/gateway/utils/: env.py
tests/: mock_downstream.py  test_aggregator.py  test_auth.py  test_boot_smoke.py  test_config.py  test_pipeline.py  test_rate_limiter.py  test_server.py  test_usage_logger.py  test_utils.py
