[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gateway"
version = "0.1.0"
description = "Multi-Tenant MCP Gateway — auth, rate limiting, routing, and proxy aggregation for downstream MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "mcp>=1.0.0",               # MCP SDK (server + client)
    "uvicorn>=0.30.0",           # ASGI server for SSE transport
    "starlette>=0.38.0",         # Lightweight ASGI framework (SSE endpoint)
    "httpx>=0.27.0",             # Async HTTP client for downstream calls
    "pyyaml>=6.0",               # Tenant config parsing
    "pydantic>=2.0",             # Config and message validation
    "structlog>=24.0",           # Structured logging
    "click>=8.1",                # CLI entry point
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
mcp-gateway = "gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
